plugins {
	id 'application'
	id 'eclipse'
}

group = 'org.virginiaso.photogator'
version = '1.0.2'
sourceCompatibility = '17'

tasks.withType(JavaCompile) {
	options.compilerArgs += '-Xlint:all'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'io.github.java-native:jssc:2.9.4'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
}

application {
	mainClass = 'org.virginiaso.photogator.Photogator'
}

jar {
	manifest {
		attributes(
			'Implementation-Title': 'Photogator',
			'Implementation-Vendor': 'Virginia Science Olympiad (VASO)',
			'Implementation-Version': project.version,
			'Main-Class': application.mainClass
		)
	}
	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}

test {
	useJUnitPlatform()
}
